forget password, change password

--- a/src/main/resources/templates/forget-password.html
+++ b/src/main/resources/templates/forget-password.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Xác nhận đăng ký</title>
+<title></title>
  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -14,22 +14,20 @@
         <h1 class="text-center mt-5 text-success">VEGETFOOD</h1>
         <div class="shadow">
             <div class="py-3">
-                <h3 class="text-center">Vui lòng kiểm tra email của bạn để nhận mã OTP!</h3>
-                <p class="text-center">Thiết lập 1 tài khoản mới</p>
+                <h3 class="text-center">Nhập email để xác thực!</h3>
+                <p class="text-center">Email</p>
             </div>
             
             <div th:if="${error}" class="alert alert-danger">
             	<p th:text="${error}" class="text-center"></p>
            </div>
 
-            <form th:action="@{vertify}" class="d-flex flex-row justify-content-center" method="post">
+            <form th:action="@{forget-password}" class="d-flex flex-row justify-content-center" method="post">
                 <div class="d-flex flex-column align-items-center mb-4 col-md-4">
                     <div class="form-outline flex-fill mb-0">
-                        <input name="otp" type="number" class="form-control" id="otp" required="required"/>
-                        <label class="form-label" for="otp">Nhập mã OTP để xác thực tài khoản</label>
+                        <input name="email" type="email" class="form-control" id="otp" required="required"/>
+                        <label class="form-label" for="otp">Nhập email</label>
                     </div>
-                    <input type="hidden" th:value="${otpCode}" name="otpCode">
-                    <input type="hidden" th:value="${user}" name="otpCode">
                     <button type="submit" class="btn btn-primary col-12 mt-3">Xác nhận</button>
                 </div>
             </form>
