--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -82,7 +82,7 @@
                                     Nhớ tài khoản
                                 </label>
                             </div>
-                            <a href="#!" class="text-body">Quên mật khẩu?</a>
+                            <a th:href="@{forget-password}" class="text-body">Quên mật khẩu?</a>
                         </div>
 
                         <div class="text-center text-lg-start mt-4 pt-2">
