--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -47,7 +47,7 @@
                         <div th:if="${error}" class="text-center alert alert-danger">
                             <p th:text="${error}"></p>
                         </div>
-                        <table class="table">
+                        <table class="table table-striped text-center">
                             <thead>
                                 <tr>
                                     <th scope="col">ID</th>
