--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -45,7 +45,7 @@
 						<div th:if = "${error}" class="text-center alert alert-danger">
 			                <p th:text="${error}"></p>
 			            </div>
-                        <table class="table table-striped">
+                        <table class="table table-striped text-center">
                             <thead>
                                 <tr>
                                     
