--- a/src/main/resources/templates/orderManage.html
+++ b/src/main/resources/templates/orderManage.html
@@ -60,7 +60,7 @@
                         <div th:if="${error}" class="text-center alert alert-danger">
                             <p th:text="${error}"></p>
                         </div>
-                        <table class="table table-striped">
+                        <table class="table table-striped text-center">
                             <thead>
                                 <tr>
                                     <th>Mã đơn hàng</th>
