--- a/src/main/resources/templates/rewrite-password.html
+++ b/src/main/resources/templates/rewrite-password.html
@@ -14,22 +14,25 @@
         <h1 class="text-center mt-5 text-success">VEGETFOOD</h1>
         <div class="shadow">
             <div class="py-3">
-                <h3 class="text-center">Vui lòng kiểm tra email của bạn để nhận mã OTP!</h3>
-                <p class="text-center">Thiết lập 1 tài khoản mới</p>
+                <h3 class="text-center">Mật khẩu!</h3>
+                <p class="text-center">Thiết lập 1 mật khẩu mới mới</p>
             </div>
             
             <div th:if="${error}" class="alert alert-danger">
             	<p th:text="${error}" class="text-center"></p>
            </div>
 
-            <form th:action="@{vertify}" class="d-flex flex-row justify-content-center" method="post">
+            <form th:action="@{new-password}" class="d-flex flex-row justify-content-center" method="post">
                 <div class="d-flex flex-column align-items-center mb-4 col-md-4">
-                    <div class="form-outline flex-fill mb-0">
-                        <input name="otp" type="number" class="form-control" id="otp" required="required"/>
-                        <label class="form-label" for="otp">Nhập mã OTP để xác thực tài khoản</label>
+                    <div class="form-outline flex-fill mb-3">
+                        <input name="password" type="password" class="form-control" id="password" required="required"/>
+                        <label class="form-label" for="otp">Nhập mật khẩu mới</label>
                     </div>
-                    <input type="hidden" th:value="${otpCode}" name="otpCode">
-                    <input type="hidden" th:value="${user}" name="otpCode">
+                    <div class="form-outline flex-fill mb-0">
+                        <input name="repeat-password" type="password" class="form-control" id="repeat-password" required="required"/>
+                        <label class="form-label" for="repeat-password">Nhập lại mật khẩu mới</label>
+                    </div>
+                    <input type="hidden" th:value="${email}" name="email">
                     <button type="submit" class="btn btn-primary col-12 mt-3">Xác nhận</button>
                 </div>
             </form>
