--- a/src/main/resources/templates/order-user.html
+++ b/src/main/resources/templates/order-user.html
@@ -57,7 +57,7 @@
 			            <h2>Chi tiết đơn hàng</h2>
 			        </div>
 			        <div class="col text-right mb-2">
-			            <a th:href="@{/vegetfood/user(id=${userId})}"><i class="fa-solid fa-chevron-left"></i>&nbsp;Quay lại</a>
+			            <a th:href="@{/vegetfood/user(id=${userId}, p=${currentPage})}"><i class="fa-solid fa-chevron-left"></i>&nbsp;Quay lại</a>
 			        </div>
                     <table class="table">
                         <thead>
