--- a/src/main/resources/templates/orderManage.html
+++ b/src/main/resources/templates/orderManage.html
@@ -101,7 +101,7 @@
                                             </select>
                                         </td>
                                         <td class="align-middle">
-                                            <a th:href="@{/vegetfood/admin/order/detail(oid=${o.id})}"
+                                            <a th:href="@{/vegetfood/admin/order/detail(oid=${o.id}, p=${currentPage})}"
                                                 class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
                                         </td>
                                         <td class="align-middle">
