--- a/src/main/resources/templates/vertify.html
+++ b/src/main/resources/templates/vertify.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet" />
+     <link rel="icon" th:href="@{/images/VEGETFOOD.png}" type="image/x-icon" />
 </head>
 <body>
 	<div class="container">
